--- a/Kaggle ML.ipynb
+++ b/Kaggle ML.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -306,69 +306,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "***************___svc___***************\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\svm\\_base.py:249: ConvergenceWarning: Solver terminated early (max_iter=1000).  Consider pre-processing your data with StandardScaler or MinMaxScaler.\n",
-      "  % self.max_iter, ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'C': 0.01, 'kernel': 'linear'}\n",
-      "***************___lr___***************\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:1355: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 16.\n",
-      "  \" = {}.\".format(effective_n_jobs(self.n_jobs)))\n",
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\svm\\_base.py:977: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  \"the number of iterations.\", ConvergenceWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'C': 5, 'penalty': 'l2'}\n",
-      "***************___knc___***************\n",
-      "{'n_neighbors': 5, 'weights': 'distance'}\n",
-      "***************___random_forest___***************\n",
-      "{'max_depth': 5, 'n_estimators': 100}\n",
-      "***************___naive_bayes___***************\n",
-      "{'alpha': 1}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\naive_bayes.py:512: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\naive_bayes.py:512: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\naive_bayes.py:512: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\naive_bayes.py:512: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
-      "C:\\Users\\adrie\\anaconda3\\envs\\sentiment\\lib\\site-packages\\sklearn\\naive_bayes.py:512: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
-      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
+      "***************___grad_boost___***************\n",
+      "{'learning_rate': 0.5, 'max_depth': 5, 'n_estimators': 1000}\n"
      ]
     }
    ],
@@ -378,21 +324,26 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "\n",
-    "model_dict = {\"svc\" : SVC(max_iter=1000, random_state=0),\n",
-    "            \"lr\" : LogisticRegression(random_state=0, solver='liblinear', n_jobs = -1, max_iter=10000),\n",
-    "            \"knc\" : KNeighborsClassifier(),\n",
-    "            \"random_forest\":RandomForestClassifier(random_state=0, n_jobs=-1),\n",
-    "            \"naive_bayes\" : MultinomialNB()}\n",
+    "model_dict = {\"grad_boost\": GradientBoostingClassifier(random_state=0, verbose=0)}\n",
     "\n",
-    "params_dict = {\"svc\" : {'C':[0.01,0.1,1,2,5,10,25], 'kernel':['linear', 'rbf', 'poly']}, \n",
-    "            \"lr\" : {'C':[0.01,0.1,1,2,5,10,25], 'penalty':['l1','l2']},\n",
-    "            \"knc\" : {'n_neighbors':[3,5,10], 'weights':['uniform','distance']},\n",
-    "            \"random_forest\":{'n_estimators':[100,500,1000], 'max_depth':[2,3,5]}, #'penalty': ['l1', 'l2']\n",
-    "            \"naive_bayes\" : {'alpha':[1,2]}}\n",
+    "# \"lr\" : LogisticRegression(random_state=0, solver='liblinear', n_jobs = -1, max_iter=10000),\n",
+    "# \"naive_bayes\" : MultinomialNB(),\n",
+    "# \"knc\" : KNeighborsClassifier(),\n",
+    "# \"random_forest\":RandomForestClassifier(random_state=0, n_jobs=-1),\n",
+    "# \"svc\" : SVC(max_iter=1000, random_state=0),\n",
+    "\n",
+    "params_dict = {\"grad_boost\": {'learning_rate':[0.1, 0.5],'n_estimators':[1000,2000,5000],'max_depth':[5,8]}}\n",
+    "\n",
+    "# \"lr\" : {'C':[0.01,0.1,1,2,5,10,25], 'penalty':['l1','l2']},\n",
+    "# \"naive_bayes\" : {'alpha':[1,2]},\n",
+    "# \"knc\" : {'n_neighbors':[3,5,10], 'weights':['uniform','distance']},\n",
+    "# \"random_forest\":{'n_estimators':[100,500,1000], 'max_depth':[2,3,5]}, #'penalty': ['l1', 'l2']\n",
+    "# \"svc\" : {'C':[0.01,0.1,1,2,5,10,25], 'kernel':['linear', 'rbf', 'poly']}, \n",
     "\n",
     "# from sklearn.metrics import f1_score, make_scorer\n",
     "# f1 = make_scorer(f1_score , average='macro')\n",
