added functions + k fold cross validation (...)

--- a/Kaggle Bert.ipynb
+++ b/Kaggle Bert.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "PreTrainedTokenizer(name_or_path='bert-base-uncased', vocab_size=30522, model_max_len=512, is_fast=False, padding_side='right', truncation_side='right', special_tokens={'unk_token': '[UNK]', 'sep_token': '[SEP]', 'pad_token': '[PAD]', 'cls_token': '[CLS]', 'mask_token': '[MASK]', 'additional_special_tokens': ['[LINK]', '[USER]']})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.weight']\n",
       "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
@@ -194,7 +194,7 @@
        "Embedding(30524, 768)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,17 +264,22 @@
     "    for i, batch in enumerate(train_dataloader, start=1):\n",
     "        batch = tuple(t.to(device) for t in batch)\n",
     "        inputs, att_masks, labels = batch\n",
+    "        #print(batch)\n",
     "        model.zero_grad()  \n",
     "        \n",
     "        logits = model(inputs, attention_mask=att_masks)\n",
     "        outputs = F.log_softmax(logits[0], dim=1)\n",
-    "        pred = np.argmax(outputs, axis=1)\n",
-    "        labels = labels.cpu().numpy()\n",
-    "        acc_list.append(accuracy_score(pred, labels))\n",
+    "        #print(outputs)\n",
     "        \n",
     "        loss = loss_fct(outputs.view(-1, 2), labels.view(-1))\n",
     "        loss.backward()\n",
     "        loss_list.append(loss.item())\n",
+    "\n",
+    "        pred_outputs = outputs.detach().cpu().numpy()\n",
+    "        #print(pred_outputs)\n",
+    "        pred = np.argmax(pred_outputs, axis=1)\n",
+    "        labels = labels.cpu().numpy()\n",
+    "        acc_list.append(accuracy_score(pred, labels))\n",
     "        \n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
     "\n",
@@ -290,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,55 +329,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 [32/7613 (0%)] - Elapsed: 0:00:15.195120  |  Loss: 0.6816\n",
-      "Train Epoch: 1 [64/7613 (1%)] - Elapsed: 0:00:30.695082  |  Loss: 0.6841\n",
-      "Train Epoch: 1 [96/7613 (1%)] - Elapsed: 0:00:46.055452  |  Loss: 0.7100\n",
-      "Train Epoch: 1 [128/7613 (2%)] - Elapsed: 0:01:00.768352  |  Loss: 0.6885\n",
-      "Train Epoch: 1 [160/7613 (2%)] - Elapsed: 0:01:15.021035  |  Loss: 0.6628\n",
-      "Train Epoch: 1 [192/7613 (3%)] - Elapsed: 0:01:29.232949  |  Loss: 0.6646\n",
-      "Train Epoch: 1 [224/7613 (3%)] - Elapsed: 0:01:43.340892  |  Loss: 0.6755\n",
-      "Train Epoch: 1 [256/7613 (3%)] - Elapsed: 0:01:57.878332  |  Loss: 0.6621\n",
-      "Train Epoch: 1 [288/7613 (4%)] - Elapsed: 0:02:13.078232  |  Loss: 0.6440\n",
-      "Train Epoch: 1 [320/7613 (4%)] - Elapsed: 0:02:27.198080  |  Loss: 0.6434\n",
-      "Train Epoch: 1 [352/7613 (5%)] - Elapsed: 0:02:41.013236  |  Loss: 0.6671\n",
-      "Train Epoch: 1 [384/7613 (5%)] - Elapsed: 0:02:55.234149  |  Loss: 0.6465\n",
-      "Train Epoch: 1 [416/7613 (5%)] - Elapsed: 0:03:09.159097  |  Loss: 0.6219\n",
-      "Train Epoch: 1 [448/7613 (6%)] - Elapsed: 0:03:22.893456  |  Loss: 0.6520\n",
-      "Train Epoch: 1 [480/7613 (6%)] - Elapsed: 0:03:36.592332  |  Loss: 0.6348\n",
-      "Train Epoch: 1 [512/7613 (7%)] - Elapsed: 0:03:50.750338  |  Loss: 0.6197\n",
-      "Train Epoch: 1 [544/7613 (7%)] - Elapsed: 0:04:05.180525  |  Loss: 0.5773\n",
-      "Train Epoch: 1 [576/7613 (8%)] - Elapsed: 0:04:19.941229  |  Loss: 0.5519\n",
-      "Train Epoch: 1 [608/7613 (8%)] - Elapsed: 0:04:34.144624  |  Loss: 0.5881\n",
-      "Train Epoch: 1 [640/7613 (8%)] - Elapsed: 0:04:48.525723  |  Loss: 0.5344\n",
-      "Train Epoch: 1 [672/7613 (9%)] - Elapsed: 0:05:02.610518  |  Loss: 0.7144\n",
-      "Train Epoch: 1 [704/7613 (9%)] - Elapsed: 0:05:16.487996  |  Loss: 0.5395\n",
-      "Train Epoch: 1 [736/7613 (10%)] - Elapsed: 0:05:31.140756  |  Loss: 0.5086\n",
-      "Train Epoch: 1 [768/7613 (10%)] - Elapsed: 0:05:45.935292  |  Loss: 0.6147\n",
-      "Train Epoch: 1 [800/7613 (11%)] - Elapsed: 0:06:00.608680  |  Loss: 0.5513\n",
-      "Train Epoch: 1 [832/7613 (11%)] - Elapsed: 0:06:15.422406  |  Loss: 0.5362\n",
-      "Train Epoch: 1 [864/7613 (11%)] - Elapsed: 0:06:30.815391  |  Loss: 0.5909\n",
-      "Train Epoch: 1 [896/7613 (12%)] - Elapsed: 0:06:45.988708  |  Loss: 0.5547\n",
-      "Train Epoch: 1 [928/7613 (12%)] - Elapsed: 0:07:01.488377  |  Loss: 0.5435\n",
-      "Train Epoch: 1 [960/7613 (13%)] - Elapsed: 0:07:16.948578  |  Loss: 0.4961\n",
-      "Train Epoch: 1 [992/7613 (13%)] - Elapsed: 0:07:31.571259  |  Loss: 0.4761\n",
-      "Train Epoch: 1 [1024/7613 (13%)] - Elapsed: 0:07:45.718429  |  Loss: 0.5666\n",
-      "Train Epoch: 1 [1056/7613 (14%)] - Elapsed: 0:08:00.844323  |  Loss: 0.4327\n",
-      "Train Epoch: 1 [1088/7613 (14%)] - Elapsed: 0:08:15.652473  |  Loss: 0.5387\n",
-      "Train Epoch: 1 [1120/7613 (15%)] - Elapsed: 0:08:30.987777  |  Loss: 0.4075\n",
-      "Train Epoch: 1 [1152/7613 (15%)] - Elapsed: 0:08:46.307205  |  Loss: 0.3478\n",
-      "Train Epoch: 1 [1184/7613 (16%)] - Elapsed: 0:09:01.153686  |  Loss: 0.3325\n",
-      "Train Epoch: 1 [1216/7613 (16%)] - Elapsed: 0:09:15.704738  |  Loss: 0.3298\n",
-      "Train Epoch: 1 [1248/7613 (16%)] - Elapsed: 0:09:30.077254  |  Loss: 0.4199\n",
-      "Train Epoch: 1 [1280/7613 (17%)] - Elapsed: 0:09:45.251593  |  Loss: 0.4857\n",
-      "Train Epoch: 1 [1312/7613 (17%)] - Elapsed: 0:09:59.837794  |  Loss: 0.4134\n",
-      "Train Epoch: 1 [1344/7613 (18%)] - Elapsed: 0:10:14.777412  |  Loss: 0.5255\n"
+      "Train Epoch: 1 [640/7613 (8%)] - Elapsed: 0:09:37.155162  |  Loss: 0.5155\n",
+      "Train Epoch: 1 [1280/7613 (17%)] - Elapsed: 0:19:02.228424  |  Loss: 0.4239\n",
+      "Train Epoch: 1 [1920/7613 (25%)] - Elapsed: 19:10:11.476495  |  Loss: 0.4824\n",
+      "Train Epoch: 1 [2560/7613 (34%)] - Elapsed: 19:15:30.340208  |  Loss: 0.5009\n",
+      "Train Epoch: 1 [3200/7613 (42%)] - Elapsed: 19:20:00.842540  |  Loss: 0.4001\n",
+      "Train Epoch: 1 [3840/7613 (50%)] - Elapsed: 19:24:26.796690  |  Loss: 0.5613\n",
+      "Train Epoch: 1 [4480/7613 (59%)] - Elapsed: 19:28:44.719283  |  Loss: 0.4545\n",
+      "Train Epoch: 1 [5120/7613 (67%)] - Elapsed: 19:33:00.047386  |  Loss: 0.4600\n",
+      "Train Epoch: 1 [5760/7613 (76%)] - Elapsed: 19:37:16.013321  |  Loss: 0.5077\n",
+      "Train Epoch: 1 [6400/7613 (84%)] - Elapsed: 19:41:33.417413  |  Loss: 0.2726\n",
+      "Train Epoch: 1 [7040/7613 (92%)] - Elapsed: 19:45:49.457083  |  Loss: 0.2937\n",
+      "Training time per epoch :\n",
+      "[(1, 71378)]\n",
+      "Total training time for 1 epochs : 1189.63 minutes\n"
      ]
     }
    ],
@@ -382,20 +359,30 @@
     "log_name = '{}_{}'.format(model_name, datetime.now().strftime('%Y%m%d_%H%M%S'))\n",
     "writer = SummaryWriter('logs/{}'.format(log_name))\n",
     "\n",
-    "nb_epoch = 5\n",
+    "nb_epoch = 1\n",
     "\n",
     "time_list = []\n",
     "for epoch in range(1, nb_epoch+1):\n",
     "    t0 = datetime.now()\n",
     "    accuracy, avg_loss = train(epoch)\n",
-    "    time_list.append(datetime.now()-t0)\n",
+    "    time_list.append((datetime.now()-t0).seconds)\n",
     "    writer.add_scalar('loss/train', avg_loss, epoch)\n",
     "    writer.add_scalar('acc/train', accuracy, epoch)\n",
     "print(\"Training time per epoch :\")\n",
     "print(list(zip(range(1,nb_epoch+1),time_list)))\n",
-    "total_time = round(sum(time_list),2)\n",
-    "print(f\"Total training time for {nb_epoch} epochs : {total_time} seconds\")\n",
+    "total_time = round(sum(time_list)/60,2)\n",
+    "print(f\"Total training time for {nb_epoch} epochs : {total_time} minutes\")\n",
     "#     test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir logs"
    ]
   },
   {
